@@ -1,3 +1,7 @@
+2020-06-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Switch to bionic, change to derive package and version
+
 2020-04-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Correct one badge URL
